# duetmacs

./: .gitignore  AGENTS.md  README.md  flake.nix  package-lock.json
.github/workflows/: ci.yml
docs/: ai-ide-feature-list.md
docs/architecture/: overview.md
docs/architecture/duet-rpc/: technical-architecture.md
docs/architecture/duet-rpc/decision-log/: adr-log.md
docs/epics/: epics.md
docs/epics/epic1/: risk-register.md
docs/epics/epic1/001-cli-version-help-bootstrap/: 001-cli-version-help-bootstrap.md  test-strategy.md  ux.md
docs/epics/epic1/001-cli-version-help-bootstrap/components/: 01-output-formatter.md  02-version-manager.md  03-logger.md  04-config-loader.md  05-help-formatter.md  06-error-handler.md  07-cli-parser.md  component-map.md
docs/epics/epic1/002-emacs-init-health/: 002-emacs-init-health.md  ux.md
docs/epics/epic1/003-cli-doctor/: 003-cli-doctor.md  ux.md
docs/epics/epic1/004-cli-rpc-ping/: 004-cli-rpc-ping.md  ux.md
docs/epics/epic1/005-emacs-subprocess-mgmt/: 005-emacs-subprocess-mgmt.md  ux.md
docs/epics/epic1/006-cli-prompt-dry-run/: 006-cli-prompt-dry-run.md  ux.md
docs/epics/epic1/007-emacs-command-palette/: 007-emacs-command-palette.md  ux.md
docs/epics/epic1/008-ci-smoke-checks/: 008-ci-smoke-checks.md
duet-rpc/: CHANGELOG.md  cabal.project.freeze  duet-rpc.cabal  typescript
duet-rpc/app/: Main.hs
duet-rpc/src/Duet/Rpc/: Logger.hs  VersionManager.hs
duet-rpc/src/Duet/Rpc/CLI/: Core.hs  Shell.hs
duet-rpc/src/Duet/Rpc/Config/: Loader.hs
duet-rpc/src/Duet/Rpc/JsonRpc/: Types.hs
duet-rpc/src/Duet/Rpc/OutputFormatter/: Core.hs  Shell.hs
duet-rpc/test/: Main.hs
duet-rpc/test/Duet/Rpc/Test/: CLI.hs  Unit.hs
duet-rpc/test/Duet/Rpc/Test/CLI/: Assertions.hs  Core.hs  Errors.hs  Golden.hs  Harness.hs  Help.hs  Helpers.hs  Logging.hs  NoColor.hs  TTY.hs  Version.hs
duet-rpc/test/Duet/Rpc/Test/Unit/: ConfigLoader.hs  ErrorHandler.hs  OutputFormatter.hs  VersionManager.hs
duet-rpc/test/golden/: help_plain.txt
hooks/: pre-commit
